Merge changes from internal repository